--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,20 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+        }
+        
+        header {
+            background-image: url('/background.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            color: white;
+            height: 150px;
+            position: relative;
+        }
+        
+        a {
+            color: white;
+        }
