styles.css updated

--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,7 @@
             padding-left: 10px;
             padding-right: 10px;
         }
+        
+        nav li span {
+            padding-left: 5px;
+        }
