--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
         }
         
         a {
-            color: white;
+            color: black;
         }
         
         .overlay {
@@ -53,4 +53,10 @@
         
         nav li span {
             padding-left: 5px;
+        }
+        
+        li a {
+            padding: 5px;
+            background-color: #fff;
+            text-decoration: none;
         }
