styles.css updated

--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,9 @@
             background-color: #fff;
             text-decoration: none;
         }
+        
+        .cart ion-icon {
+            vertical-align: bottom;
+            font-size: 20px;
+            padding-right: 5px;
+        }
