--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,10 @@
             font-size: 20px;
             padding-right: 5px;
         }
+        
+        .cart a {
+            background-color: royalblue;
+            color: #fff;
+            cursor: pointer;
+            text-decoration: none;
+        }
