--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,83 @@
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        header {
-            background-image: url('/background.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            color: white;
-            height: 150px;
-            position: relative;
-        }
-        
-        a {
-            color: black;
-        }
-        
-        .overlay {
-            position: absolute;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            height: 100%;
-            right: 0;
-            bottom: 0;
-            padding: 0 !important;
-            margin: 0 !important;
-            background-color: rgba(10, 10, 10, 0.1);
-        }
-        
-        nav {
-            position: absolute;
-            z-index: 2;
-            top: 0;
-            left: 0;
-            right: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            padding: 30px 60px 0 60px;
-        }
-        
-        nav li {
-            list-style: none;
-            display: inline-block;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-        
-        nav li span {
-            padding-left: 5px;
-        }
-        
-        li a {
-            padding: 5px;
-            background-color: #fff;
-            text-decoration: none;
-        }
-        
-        .cart ion-icon {
-            vertical-align: bottom;
-            font-size: 20px;
-            padding-right: 5px;
-        }
-        
-        .cart a {
-            background-color: royalblue;
-            color: #fff;
-            cursor: pointer;
-            text-decoration: none;
-        }
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                font-family: 'Roboto', sans-serif;
+            }
+            
+            header {
+                background-image: url('/background.jpg');
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                color: white;
+                height: 150px;
+                position: relative;
+            }
+            
+            a {
+                color: black;
+            }
+            
+            .overlay {
+                position: absolute;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                height: 100%;
+                right: 0;
+                bottom: 0;
+                padding: 0 !important;
+                margin: 0 !important;
+                background-color: rgba(10, 10, 10, 0.1);
+            }
+            
+            nav {
+                position: absolute;
+                z-index: 2;
+                top: 0;
+                left: 0;
+                right: 0;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                padding: 30px 60px 0 60px;
+            }
+            
+            nav li {
+                list-style: none;
+                display: inline-block;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            
+            nav li span {
+                padding-left: 5px;
+            }
+            
+            li a {
+                padding: 5px;
+                background-color: #fff;
+                text-decoration: none;
+            }
+            
+            .cart ion-icon {
+                vertical-align: bottom;
+                font-size: 20px;
+                padding-right: 5px;
+            }
+            
+            .cart a {
+                background-color: royalblue;
+                color: #fff;
+                cursor: pointer;
+                text-decoration: none;
+            }
+            
+            .container {
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                margin-top: 50px;
+                padding-bottom: 100px;
+            }
