--- a/styles.css
+++ b/styles.css
@@ -100,11 +100,13 @@
                 position: absolute;
                 width: 100%;
                 right: 0;
-                background-color: darkgray;
+                background-color: rgba(13, 13, 13, 0.6);
                 transition: all 0.3s ease-in-out;
                 opacity: 0;
                 cursor: pointer;
                 text-align: center;
+                color: #fff;
+                font-style: bold;
             }
             
             .image:hover .cart1,
@@ -113,6 +115,6 @@
             .image:hover .cart4 {
                 bottom: 0px;
                 opacity: 1;
-                padding: 10px;
+                padding: 45px;
                 text-decoration: none;
             }
