style.css updated

--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,10 @@
             .product-title {
                 width: 45%;
             }
+            
+            .price {
+                width: 15%;
+                border-bottom: 4px solid lightgray;
+                display: flex;
+                align-items: center;
+            }
