style.css updated

--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,10 @@
                 display: flex;
                 align-items: center;
             }
+            
+            .total {
+                width: 10%;
+                border-bottom: 1px solid lightgray;
+                display: flex;
+                align-items: center;
+            }
