style.css updated

--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,12 @@
                 display: flex;
                 align-items: center;
             }
+            
+            .product {
+                width: 45%;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                padding: 10px 0;
+                border-bottom: 1px solid lightgray;
+            }
