style.css updated

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,14 @@
                 margin-top: 50px;
             }
             
+            .products-container ion-icon {
+                font-size: 25px;
+                color: blue;
+                margin-left: 10px;
+                margin-right: 10px;
+                cursor: pointer;
+            }
+            
             .product-header {
                 width: 100%;
                 max-width: 650px;
